# souravjr0.github.io

./: .gitignore  ADVANCED_SETUP.md  ANIMATION_ENHANCEMENTS.md  ANIMATION_SHOWCASE.md  CNAME  CUSTOMIZATION_GUIDE.md  DOCUMENTATION_INDEX.md  GETTING_STARTED.md  GITHUB_PAGES_SETUP.md  INDEX.md  PORTFOLIO_ENHANCEMENT_SUMMARY.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  SETUP_SUMMARY.md  VISUAL_STEP_BY_STEP.md  WEBSITE_READY.md  _config.yml  index.html  prompt_draft.md  script.js  style.css  trader.db  verifyforzoho.html
.github/: copilot-instructions.md
assets/: README.md  index-AKiUCrl9.css  index-BONnhs4A.js  index-B_Yp5hWn.js  index-BzqVeiV7.js  index-C35JB8JR.js  index-CDCzOOrl.js  index-CLiQx9--.css  index-CTGms5u0.css  index-CUBKW69E.js  index-Ch21EqKX.css  index-D-2FrhcB.css  index-D7joZr3F.css  index-DoxX4ylI.js  index-TNpBZP01.css  index-jQmYNUPK.css  index-uGlYeHdt.js  index-z6LG_vmQ.js  three-CKX7XHxS.js  three-zXg7j_cD.js
customer-segmentation-dashboard/: README.md  app.py  requirements.txt
defect-detection-cv/: README.md  requirements.txt
demand-forecasting-mlops/: README.md  requirements.txt
floating bot/: README.md  arbitrage_engine.py  backtester.py  cabal_scraper.py  collector.py  copy_trader.py  dev_tripwire.py  insider_tracker.py  insider_wallets.json  jito_bundle.py  jito_mempool.py  jup_arb_engine.py  launch_predictor.py  limit_order_sniper.py  micro_strategy.py  pool_parsers.py  profit_tracker.py  pumpfun_sniper.py  requirements.txt  solana_bot.py  (+5 more)
floating bot/rust_executor/: Cargo.toml
floating bot/rust_executor/src/: main.rs
(+692 files in other folders)
