[package]
name = "rust_executor"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
solana-client = "1.16"
solana-sdk = "1.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
bs58 = "0.5"
dotenv = "0.15"
